completed search, fetch data, and render data functions

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
     <div id="container">
         <div id="searchbar">
-            <form>
+            <form id="searchform">
                 <i class="fas fa-map-marker-alt fa-2x"></i>
-                <input type="text" id="location" placeholder="Search city">
+                <input type="text" id="city" placeholder="Search city">
             </form>
         </div>
         <div id="card">
             <div id="data">
-                <div id="cityname">New York</div>
+                <div id="currentcity">New York</div>
                 <div id="currenttemp">35°</div>
                 <div id="icon"></div>
                 <div id="condition">Cloudy</div>
@@ -32,9 +32,9 @@
                 </div>
             </div>
             <div class="unit">
-                <button id="F">F</button>
+                <button id="F">°F</button>
                 <div>|</div>
-                <button id="C">C</button>
+                <button id="C">°C</button>
             </div>
         </div>
     </div>
