added weather icons

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         </div>
         <div id="card">
             <div id="data">
-                <div id="currentcity">New York</div>
-                <div id="currenttemp">35°</div>
+                <div id="currentcity"></div>
+                <div id="currenttemp"></div>
                 <div id="icon"></div>
-                <div id="condition">Cloudy</div>
+                <div id="condition"></div>
+                <div id="weather-icon"><img src="" /></div>
                 <div class="highandlow">
-                    <div id="high">H: 39°</div>
-                    <div id="low">L: 31°</div>
+                    <div id="high"></div>
+                    <div id="low"></div>
                 </div>
             </div>
             <div class="unit">
