minor style changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="currenttemp"></div>
                 <div id="icon"></div>
                 <div id="condition"></div>
-                <div id="weather-icon"><img src="" /></div>
+                <div id="weathericon"><img src="" /></div>
                 <div class="highandlow">
                     <div id="high"></div>
                     <div id="low"></div>
