added humidity and wind speed to current forecast

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
                 <div id="high"></div>
                 <div id="low"></div>
             </div>
+            <div class="more-info">
+                <div id="humidity"></div>
+                <div id="wind"></div>
+            </div>
         </div>
     </div>
-    <script type='text/javascript' src='config.js'></script>
     <script src="script.js"></script>
 </body>
 
