--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="header">
-        <img src="./logo.png" id="logo"></img>
+        <img src="./logo.png" id="logo" alt="logo"></img>
         <div id="searchbar">
             <form id="searchform">
                 <i class="fas fa-map-marker-alt fa-1x"></i>
@@ -26,7 +26,7 @@
             <button id="C">°C</button>
         </div>
     </div>
-    <div id="container">
+    <div id="content">
         <div id="today-card">
             <div id="currentcity"></div>
             <div id="currenttemp"></div>
@@ -41,7 +41,17 @@
                 <div id="wind"></div>
             </div>
         </div>
+        <div id="hourly-card">
+
+        </div>
     </div>
+    <template class="hourly-template">
+        <div class="hour-cell">
+            <div class="hour"></div>
+            <div><img src="" class="icon" alt="Weather icon"></img></div>
+            <div class="temp"></div>
+        </div>
+    </template>
     <script src="script.js"></script>
 </body>
 
