--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
         <div id="today-card">
             <div id="currentcity"></div>
             <div id="currenttemp"></div>
-            <div id="icon"></div>
-            <div id="condition"></div>
-            <div class="highandlow">
-                <div id="high"></div>
-                <div id="low"></div>
-            </div>
-            <div class="more-info">
-                <div id="humidity"></div>
-                <div id="wind"></div>
+            <div id="details">
+                <div id="condition"></div>
+                <div class="highandlow">
+                    <div id="high"></div>
+                    <div id="low"></div>
+                </div>
+                <div class="more-info">
+                    <div id="humidity"></div>
+                    <div id="wind"></div>
+                </div>
             </div>
         </div>
         <div id="hourly-card">
