added render 7 day forecast functionality

--- a/index.html
+++ b/index.html
@@ -42,14 +42,22 @@
                 </div>
             </div>
         </div>
-        <div id="hourly-card">
-
+        <div id="hourly-card"></div>
+        <div id="week-card">
         </div>
     </div>
     <template class="hourly-template">
         <div class="hour-cell">
             <div class="hour"></div>
             <div><img src="" class="icon" alt="Weather icon"></img></div>
+            <div class="temp"></div>
+        </div>
+    </template>
+    <template class="week-template">
+        <div class="day-cell">
+            <div class="day"></div>
+            <div><img src="" class="icon" alt="Weather icon"></img></div>
+            <div class="details"></div>
             <div class="temp"></div>
         </div>
     </template>
