fixed 7 day forecast to respect timezone of city

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             </div>
         </div>
         <div id="hourly-card"></div>
-        <div id="week-card">
+        <div id="week-card"></div>
+    </div>
+    <div id="footer">
+        <div>Icons by iconixar - Flaticon</div>
+        <div class="github">
+            <div>Copyright &copy 2022 kwen0</div>
+            <a href="https://github.com/kwen0/weather-app">
+                <img src="icons/github.png" alt="github logo" class="ghlogo" />
+            </a>
         </div>
     </div>
     <template class="hourly-template">
