updating weather icons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="week-card"></div>
     </div>
     <div id="footer">
-        <div>Icons by iconixar - Flaticon</div>
+        <div>Weather icons by iconixar - Flaticon</div>
         <div class="github">
             <div>Copyright &copy 2022 kwen0</div>
             <a href="https://github.com/kwen0/weather-app">
