updated css for mobile friendliness

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="footer">
         <div>Weather icons by iconixar - Flaticon</div>
         <div class="github">
-            <div>Copyright &copy 2022 kwen0</div>
+            <div>&copy 2022 kwen0</div>
             <a href="https://github.com/kwen0/weather-app">
                 <img src="icons/github.png" alt="github logo" class="ghlogo" />
             </a>
